--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PR'
 - !lcsh 'Axholme, Isle of (England) -- History -- Fiction'
+- GITenberg
 title: The MS. in a Red Box
 url: http://www.gutenberg.org/ebooks/35778
